[package]
name = "py-yi"
version = "0.1.0"
edition = "2024"

[lib]
name = "py_yi"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module"] }
tea-yi = { path = "../tea-yi" }
pyo3-polars = { version = "0.25", features=["derive"]}
# polars = {version = "0.52", features=["rolling_window"], default-features = false}
serde = "1"
tevec = {git="https://github.com/teamon9161/tevec.git", rev = "a54d6f4", features=["polars"], default-features = false}